# wireviz-gui

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  build.rs  package.json  pnpm-lock.yaml  setup.sh
.claude/: settings.json
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: app.vue
frontend/app/assets/css/: cmdiy.css
frontend/app/composables/: useAssets.ts  useTheme.ts  useWirevizCompletion.ts  useWvzBundle.ts  useZipBundle.ts
frontend/app/schemas/: wireviz.schema.json
frontend/app/templates/: wireviz.ts
frontend/server/api/wireviz/: extract.post.ts  health.get.ts  parse-multipart.post.ts  parse.post.ts
frontend/server/api/wireviz/render/: png-multipart.post.ts  png.post.ts
frontend/tests/nuxt/: useAssets.spec.ts
frontend/tests/unit/: templates.spec.ts  useWirevizCompletion.spec.ts  useZipBundle.spec.ts
sidecar/: pyproject.toml
sidecar/tests/: test_smoke.py
sidecar/wireviz_gui_sidecar/: __main__.py  app.py
src/: WireViz.code-workspace  app.rs  main.rs
src/state/: document.rs  mod.rs  settings.rs  workspace.rs
src/ui/: bom.rs  editor.rs  export_dialog.rs  mod.rs  preview.rs  status_bar.rs  toolbar.rs  validation_panel.rs
src/utils/: mod.rs  svg_renderer.rs
src/wireviz/: bom.rs  cli.rs  mod.rs  types.rs
