[package]
name = "wireviz-gui"
version = "0.1.0"
edition = "2021"
authors = ["WireViz Contributors"]
description = "Cross-platform GUI for WireViz cable documentation"
license = "GPL-3.0"
repository = "https://github.com/wireviz/wireviz-gui"

[dependencies]
# GUI Framework
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["syntect"] }

# File I/O
rfd = "0.15"
dirs = "5.0"

# YAML Processing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# SVG Rendering
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

# Text Editing
egui_code_editor = "0.2"

# Subprocess & Async
tokio = { version = "1", features = ["process", "io-util", "fs", "time", "rt"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
which = "6.0"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 0
