[project]
name = "wireviz-gui-sidecar"
version = "0.1.0"
description = "FastAPI sidecar wrapping wireviz 0.5.0 for the wireviz-gui frontend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "wireviz @ file:///Users/colegentry/Development/WireViz",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
wireviz-gui-sidecar = "wireviz_gui_sidecar.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wireviz_gui_sidecar*"]
